<resources>
    <string name="app_name">MugShot</string>
    <string name="login">Login</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="password_hint">Enter Password</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="dont_have_an_account_register">Don\'t have an account? Register</string>
    <string name="sign_out">Sign out</string>
    <string name="create_an_account">Create an Account</string>
    <string name="first_name_hint">Enter First Name</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="confirm_password_hint">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="coffee">Coffee</string>
    <string name="account">Account</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="image">image</string>
    <string name="create_post">Create Post</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="username">username</string>
    <string name="post_count">Posts: </string>
    <string name="friends_count">Friends: 0</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="select_image">Select Image</string>
    <string name="image_preview">Image Preview</string>
    <string name="cafe">Cafe</string>
    <string name="star">star</string>
    <string name="x">X</string>
    <string name="enter_cafe_name">Enter Cafe Name</string>
    <string name="enter_cafe_details">Enter Cafe Details</string>
    <string name="enter_cafe_location">Enter Cafe Location</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="post_a_comment">Post a Comment</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="post">Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="upload_profile_pic">Upload a new profile picture</string>
    <string name="username_edit_header"><strong>Username</strong></string>
    <string name="change_username_hint">Enter new username</string>
    <string name="update_profile_info">Update</string>
    <string name="current_username">Current Username: %s</string>
    <string name="username_header">Edit Username</string>
    <string name="password_header">Edit Password</string>
    <string name="current_password_text">Enter current password</string>
    <string name="new_password_text">Enter new password</string>
    <string name="new_password_confirm_text">Confirm new password</string>
    <string name="users">Users</string>
    <string name="nearby_cafes">Nearby Cafes</string>
</resources>