<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:background="@color/accent2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/friend_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_picture"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_account_foreground"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <TextView
            android:id="@+id/friend_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <ImageView
                android:id="@+id/remove_friend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/remove_friend"
                android:gravity="end"
                android:src="@drawable/ic_friends_remove_foreground" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>