<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ViewPostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/poster_profile_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_account_foreground"
            app:shapeAppearance="@style/circleImageView" />

        <TextView
            android:id="@+id/poster_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/edit_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:contentDescription="@string/edit"
                android:fontFamily="@font/open_sans"
                android:src="@drawable/ic_edit_foreground"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/delete_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete_foreground"
                android:visibility="gone" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:fontFamily="@font/open_sans"
                android:padding="0dp"
                android:text="@string/x"
                android:textColor="@color/black_semi_transparent"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:id="@+id/post_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:background="@color/accent2"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_description"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@color/accent"
            android:fontFamily="@font/open_sans"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="211dp"
            android:layout_height="300dp"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@color/accent"
            android:contentDescription="@string/image"
            android:padding="10dp"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/post_cafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:background="@color/accent2"
            android:fontFamily="@font/open_sans"
            android:gravity="start"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </GridLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/post_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:fontFamily="@font/open_sans"
        android:hint="@string/post_a_comment"
        android:inputType="text"
        android:maxLength="32"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_semi_transparent"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:divider="@null" />


</LinearLayout>